# agentic-ai-with-google-adk

./: .gitignore  README.md  pyproject.toml  requirements.txt
adk_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agents/: .env  agent.py
agents/.adk/: session.db
multi-agents/: .env
multi-agents/entertainment_agent_proper_modules/: agent.py
multi-agents/entertainment_agent_proper_modules/.adk/: session.db
multi-agents/entertainment_agent_single_file/: agent.py
multi-agents/entertainment_agent_single_file/.adk/: session.db
multi-agents/entertainment_agent_with_tools/: agent.py
multi-agents/entertainment_agent_with_tools/.adk/: session.db
tools-with-agents/bbc_agent_crewai_tool/: agent.py
tools-with-agents/bbc_agent_crewai_tool/.adk/: session.db
tools-with-agents/biq_query_tool/: agent.py
tools-with-agents/google_search_agent/: agent.py
tools-with-agents/google_search_agent/.adk/: session.db
tools-with-agents/math_agent_custom_tool/: agent.py
tools-with-agents/math_agent_custom_tool/.adk/: session.db
tools-with-agents/wiki_agent_langchain_tool/: agent.py
tools-with-agents/wiki_agent_langchain_tool/.adk/: session.db
vertex-ai/: main.py  main_with_out_service_account_using_gcloud_cli.py
work-flow-agents/code_writer_agent_loop/: agent.py
work-flow-agents/code_writer_agent_loop/.adk/: session.db
work-flow-agents/marketing_agent_parallel/: agent.py
work-flow-agents/marketing_agent_parallel/.adk/: session.db
work-flow-agents/news_summarizer_agent/: agent.py
work-flow-agents/news_summarizer_agent/.adk/: session.db
(+12 files in other folders)
