[project]
name = "adk-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.12.0",
    "litellm>=1.76.0",
    "streamlit>=1.49.1",
    "langchain-community>=0.0.271",
    "crewai>=1.14.3",
    "crewai-tools>=1.14.3",
]
